tests/datakinds/should_compile/DataKind8.hs
{-# LANGUAGE DataKinds #-}
{-# LANGUAGE PolyKinds #-}
module DataKinds8 where

data kind K a = T (K (Maybe a))

